# cobgl

./: .gitignore  configure.ac
src/: Makefile.am  Makefile.in  Shapes.hh  Vertex.hh  core.cc  core.hh  data.hh  main.cc
